# rust_study

./: AGENTS.md  README.md  RUST.md  STUDY_GUIDE.md
PHASE1/1.1-CLI-HASH-CACHE/: .gitignore  CODE.md  Cargo.toml  DECISIONS.md  PLAN.md
PHASE1/1.1-CLI-HASH-CACHE/src/: lib.rs  main.rs
PHASE1/1.2-MARKDOWN-SANITIZER/: CODE.md  Cargo.toml  DECISIONS.md
PHASE1/1.2-MARKDOWN-SANITIZER/src/: lib.rs  main.rs
PHASE1/1.3-IMAGE-THUMBNAIL-GENERATOR/: CODE.md  Cargo.toml  DECISIONS.md
PHASE1/1.3-IMAGE-THUMBNAIL-GENERATOR/src/: lib.rs  main.rs
csearch-rscraper/: .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  docker-entrypoint.sh  explore.sql  schema.sql
csearch-rscraper/smoke/: docker-compose.yml  run-bill-upsert-smoke.sh
csearch-rscraper/src/: bills.rs  config.rs  db.rs  hashes.rs  main.rs  models.rs  python.rs  redis_cache.rs  stats.rs  util.rs  votes.rs
docs/: 01-overview-and-core-ideas.md  02-async-and-concurrency.md  03-data-formats-and-persistence.md  04-services-and-configuration.md  05-cli-files-and-media.md  06-types-strings-and-iterators.md  07-features-testing-and-crates.md  README.md
