[package]
name = "csearch-rscraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
quick-xml = { version = "0.37", features = ["serialize"] }
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3"
