[package]
name = "cli-hash-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.20"
